# vst-sam-spl-64

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  configure.bat  fetch_jamba.cmake  jamba.cmake  libsndfile.cmake  r8brain-free-src.cmake
.github/workflows/: run-tests-macos-action.yml  run-tests-windows-action.yml
archive/: README-macOS_64bits.txt  README-win_64bits.txt
audio-unit/: audiounitconfig.h
design/: button-style.css  design.txt  gen_button.groovy
design/Edit.pxd/: metadata.info
design/Edit.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/Edit.pxd/data/: 9DD3F1AA-AEC5-45CC-BBB7-235ECC7A9441
design/Edit_subtab_edit.pxd/: metadata.info
design/Edit_subtab_edit.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/Edit_subtab_sample.pxd/: metadata.info
design/Edit_subtab_sample.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/Play.pxd/: metadata.info
design/Play.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/Play.pxd/data/: 330577ED-9209-4311-A5DC-9CE851E3A834  585AB0B8-39D1-4820-9605-DD0B08B95DC2  654D4DF3-BC60-48BC-89BC-315ED40E3D15  7F7C1718-5D97-4124-9E61-0C5954ED4ED6  9DD3F1AA-AEC5-45CC-BBB7-235ECC7A9441  A5299548-CC34-4F0A-85DF-C41C09E2911A  AA83A3EC-A440-4133-9E29-50BA687BC2AB  BD749694-3B68-4205-A9CB-8E882C1A1A3D  D25B854A-AE5C-47A4-88A6-F1DB54A2F85D
design/Sample.pxd/: metadata.info
design/Sample.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/Sample.pxd/data/: 9DD3F1AA-AEC5-45CC-BBB7-235ECC7A9441
design/action_sample_2x.pxd/: metadata.info
design/action_sample_2x.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/actions_2states_2x.pxd/: metadata.info
design/actions_2states_2x.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/actions_2states_2x.pxd/data/: 34340BBF-8BE0-426B-8BCF-A70416489546
design/actions_3states_2x.pxd/: metadata.info
design/actions_3states_2x.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/actions_3states_2x.pxd/data/: 34340BBF-8BE0-426B-8BCF-A70416489546
design/arrow.pxd/: metadata.info
design/arrow.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/arrow_2x.pxd/: metadata.info
design/arrow_2x.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/bank_2x.pxd/: metadata.info
design/bank_2x.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/button.pxd/: metadata.info
design/button.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/button.pxd/data/: 287C7798-BE79-45F0-9A9B-EB81967A6B87  57406634-FC30-4CF7-AC34-3E8D5E174336  6DC5459C-78DA-471F-ACEF-968D43CF4982  7D15BB51-903E-4DE4-A057-57AE7D8E28E9  AAC7BF79-A101-47AA-8ACD-CC8922AFF958  AF6E2A65-5804-4EBC-BAA9-A94649D0260D
design/button_2x.pxd/: metadata.info
design/button_2x.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/button_2x.pxd/data/: 2B2C4903-3902-420B-9490-C6D5D29E5052  3A25AF41-8924-41F2-846F-8FD5B3DEE5FF  682AD6C9-CAE4-4EF7-AED3-5B91BFF5E518  7E522AE1-24B3-4E62-9447-23BB72811384  A3178AA1-516A-4423-A73B-C246912EB6EC  A9A46D1B-7A2A-4838-9570-48ADF18D14DD  C68AA60D-B9AB-4FBB-A258-22FD77689ACA  C704E293-5796-48D2-A2E1-66BCFB749016  DC5AA48E-5F8E-4258-917A-42651AAA0D3D  F85F15C4-85D0-4343-A948-8C1BC7EEB792
design/edit_edit_tab_background_2x.pxd/: metadata.info
design/edit_edit_tab_background_2x.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/edit_io_tab_background_2x.pxd/: metadata.info
design/edit_io_tab_background_2x.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/edit_sample_tab_background_2x.pxd/: metadata.info
design/edit_sample_tab_background_2x.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/main_edit_tab_background_2x.pxd/: metadata.info
design/main_edit_tab_background_2x.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/main_play_tab_background_2x.pxd/: metadata.info
design/main_play_tab_background_2x.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
design/main_play_tab_background_2x.pxd/data/: 285BB19A-ED9C-4A06-AC08-3F65ACB30401  4E1034FC-49B5-40ED-BA0F-681FBE4DA601  59DEB769-6DE6-4AD6-BD48-6822A9797CA1  69EAA01C-790B-49D6-A094-AFFF84137B7E  87591C71-DDBD-42CC-9AC9-8E4E31E5892F  9C4E8597-219B-439D-98C1-2228D2743AF6  A70D3805-A9B7-4FD7-87A9-9C9699714787  AF7D814E-AE17-4EA4-80C3-A2A94E3EFEC1  BEA5BFD7-7F04-44F1-916A-AAD98F269323  DBF4C854-43C6-4B8F-8B30-B8FB9A8AA8C5  E4941AD5-E0D0-48A1-8F2E-881EEB311471  FFDA3E94-79AC-4371-9E1F-8BEC69B43135
design/main_settings_tab_background_2x.pxd/: metadata.info
design/main_settings_tab_background_2x.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
design/main_settings_tab_background_2x.pxd/data/: 285BB19A-ED9C-4A06-AC08-3F65ACB30401  2C21821A-BE1F-48B8-85CF-FC3D7FC26338  4E1034FC-49B5-40ED-BA0F-681FBE4DA601  59DEB769-6DE6-4AD6-BD48-6822A9797CA1  648CAFA0-4B88-4261-9810-E10EE2073964  702DC976-3392-4C26-A60D-F0C6412BE723  (+2 more)
design/main_view_background_2x.pxd/: metadata.info
design/quick_edit_mode_2x.pxd/: metadata.info
design/routing_2x.pxd/: metadata.info
design/sample_input_2x.pxd/: metadata.info
design/slice_2x.pxd/: metadata.info
design/slider_handle_2x.pxd/: metadata.info
design/tabs_2x.pxd/: metadata.info
design/vu_on_2x.pxd/: metadata.info
mac/: Info.plist
resource/: SampleSplitter.uidesc  gen_1x.sh
src/cpp/: FilePath.cpp  FilePath.h  Model.h  Plugin.cpp  Plugin.h  SampleBuffers.cpp  SampleBuffers.h  SampleBuffers.hpp  SampleData.cpp  SampleData.h  SampleDataMgr.cpp  SampleDataMgr.h  SampleFile.cpp  SampleFile.h  SampleMemory.cpp  SampleMemory.h  SampleMessage.cpp  SampleMessage.h  SampleSlice.cpp  SampleSlice.h  SampleSlice.hpp  SampleSlices.hpp  SampleSplitter.h  SampleSplitterCIDs.h  SampleSplitter_VST2.cpp  SampleSplitter_VST3.cpp  SampleStorage.h  Sampler.h  Sampler.hpp  SharedObjectMgr.h  SharedSampleBuffersMgr.h  Slicer.hpp  version.h.in
src/cpp/GUI/: PadView.cpp  (+44 more)
test/cpp/: test-SampleBuffers.cpp  test-SampleSlice.cpp  test-SampleSplitter.cpp  test-SharedObjectMgr.cpp  test-Slicer.cpp
(+50 files in other folders)
